# nbvh

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: bin2c_wrapper.cmake
ext/glad/: CMakeLists.txt
ext/imgui/: CMakeLists.txt  imgui_spectrum.h
ext/tinyexr/: LICENSE  tinyexr.cpp
figures/: error_comparison.py  utils.py
figures/flip/: flip_api.py
include/: glm_pch.h  ntwr.h
include/app/: render_app.h  render_app_configs.h  render_backend.h  render_display.h  renderer.h
include/base/: bbox.h  bitmap.h  material.h  mesh.h  obj_writer.h  scene.h
include/base/accel/: bvh.h  bvh8_converter.h
include/base/camera/: arcball.h  camera.h  flycam.h
include/base/gltf/: gltf_buffer_view.h  gltf_flatten.h  gltf_types.h
include/cuda/: cuda_backend.h  cuda_backend_constants.cuh
include/cuda/accel/: bvh.cuh  bvh2.cuh  bvh8.cuh  bvh_traversal_data.cuh  tlas.cuh
include/cuda/base/: material.cuh  ray.cuh  wip_disney.cuh
include/cuda/neural/: neural_bvh_module.h  neural_bvh_module_common.cuh  neural_bvh_module_constants.cuh  neural_bvh_module_kernels.cuh  neural_bvh_renderer.h  neural_bvh_renderer_constants.cuh  neural_bvh_renderer_kernels.cuh
include/cuda/neural/accel/: neural_bvh.cuh  neural_bvh2.cuh  neural_bvh8.cuh  neural_traversal_data.cuh
include/cuda/neural/path/: path_constants.cuh  path_inference_kernels.cuh  path_module.h
include/cuda/neural/prefiltering/: prefiltering_constants.cuh  prefiltering_inference_kernels.cuh  prefiltering_module.h
include/cuda/neural/utils/: bvh_split_scheduler.h  loss_gradient.cuh  pt_composite_loss.cuh  tcnn_config.h
include/cuda/utils/: colors.cuh  common.cuh  cuda_buffer.cuh  lcg_rng.cuh  rendering.cuh  sampling.cuh  types.cuh
include/cuda/utils/cudart/: cuda_math.h
include/embree/: embree_bvh.h
include/utils/: frame_timer.h  imgui_utils.h  logger.h  shader_manager.h  unordered_vector.h
nbvh/scenes_path_tracing/chess/configs/: nodes_10903_hash_18_lvl_8_tsteps_10000_neural.json  nodes_10903_hash_22_lvl_8_tsteps_10000_neural.json  nodes_1243_hash_14_lvl_8_tsteps_10000_neural.json  nodes_141511_hash_16_lvl_8_tsteps_10000_neural.json  nodes_141511_hash_20_lvl_8_tsteps_10000_neural.json  nodes_155_hash_16_lvl_8_tsteps_10000_neural.json  nodes_155_hash_22_lvl_8_tsteps_10000_neural.json  nodes_32940_hash_18_lvl_8_tsteps_10000_neural.json  nodes_32940_hash_22_lvl_8_tsteps_10000_neural.json  nodes_72814_hash_16_lvl_8_tsteps_10000_neural.json  nodes_72814_hash_18_lvl_8_tsteps_10000_neural.json  nodes_7_hash_14_lvl_8_tsteps_10000_neural.json
nbvh/scenes_path_tracing/chess/nbvhs/: nodes_32940_hash_18_lvl_8_tsteps_10000.nbvh
scene_data/scenes_path_tracing/chess/: chess.gltf
scene_data/scenes_path_tracing/chess/configs/: nodes_10903_hash_14_lvl_8_tsteps_10000_neural.json  nodes_10903_hash_16_lvl_8_tsteps_10000_neural.json  nodes_10903_hash_20_lvl_8_tsteps_10000_neural.json  nodes_1243_hash_16_lvl_8_tsteps_10000_neural.json  nodes_1243_hash_18_lvl_8_tsteps_10000_neural.json  nodes_1243_hash_20_lvl_8_tsteps_10000_neural.json  nodes_1243_hash_22_lvl_8_tsteps_10000_neural.json  nodes_141511_hash_14_lvl_8_tsteps_10000_neural.json  nodes_141511_hash_18_lvl_8_tsteps_10000_neural.json  nodes_141511_hash_22_lvl_8_tsteps_10000_neural.json  nodes_155_hash_14_lvl_8_tsteps_10000_neural.json  nodes_155_hash_18_lvl_8_tsteps_10000_neural.json  nodes_155_hash_20_lvl_8_tsteps_10000_neural.json  nodes_32940_hash_14_lvl_8_tsteps_10000_neural.json  nodes_32940_hash_16_lvl_8_tsteps_10000_neural.json  nodes_32940_hash_20_lvl_8_tsteps_10000_neural.json  nodes_72814_hash_14_lvl_8_tsteps_10000_neural.json  nodes_72814_hash_20_lvl_8_tsteps_10000_neural.json  nodes_72814_hash_22_lvl_8_tsteps_10000_neural.json  nodes_7_hash_16_lvl_8_tsteps_10000_neural.json  nodes_7_hash_18_lvl_8_tsteps_10000_neural.json  nodes_7_hash_20_lvl_8_tsteps_10000_neural.json  nodes_7_hash_22_lvl_8_tsteps_10000_neural.json
src/: main.cpp
src/app/: render_app.cpp  render_display.cpp
src/base/: material.cpp  scene.cpp
src/base/accel/: bvh.cpp  bvh8_converter.cpp
src/base/camera/: arcball.cpp  camera.cpp  flycam.cpp
src/base/gltf/: gltf_buffer_view.cpp  gltf_flatten.cpp  gltf_types.cpp
src/cuda/: cuda_backend.cpp  cuda_backend.cu  cuda_backend_constants.cu  cuda_backend_ui.cpp
src/cuda/neural/: neural_bvh_module.cu  neural_bvh_module_constants.cu  neural_bvh_module_kernels.cu  neural_bvh_renderer.cu  neural_bvh_renderer_accel.cpp  neural_bvh_renderer_constants.cu  neural_bvh_renderer_init.cu  neural_bvh_renderer_kernels.cu  neural_bvh_renderer_ui.cpp
src/cuda/neural/path/: path_constants.cu  path_inference_kernels.cu  path_module.cu  path_module_init.cu
src/cuda/neural/prefiltering/: prefiltering_constants.cu  prefiltering_inference_kernels.cu  prefiltering_module.cu  prefiltering_module_init.cu
src/utils/: logger.cpp
